[tool.poetry]
name = "acov"
version = "0.1.0"
description = ""
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
packages = [
    { include = "acov" },
    { include = "acov/build/*.js" },
]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
frida = "^14.0"
tabulate = "^0.8.6"
click-option-group = "^0.5.2"

[tool.poetry.scripts]
acov = "acov:cli"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
